# libqapt

./: CMakeLists.txt  QAptConfig.cmake.in
autotests/: CMakeLists.txt  sourceslisttest.cpp
src/: CMakeLists.txt  backend.cpp  backend.h  changelog.cpp  changelog.h  config.cpp  config.h  debfile.cpp  debfile.h  dependencyinfo.h  downloadprogress.h  globals.h  history.cpp  history.h  markingerrorinfo.h  package.cpp  package.h  sourceentry.cpp  sourceentry.h  sourceslist.h  transaction.cpp  transaction.h
src/worker/: CMakeLists.txt  aptlock.cpp  aptworker.cpp  transaction.cpp  transaction.h  workeracquire.h  workerinstallprogress.cpp
utils/: CMakeLists.txt
utils/plasma-runner-installer/: CMakeLists.txt
utils/qapt-batch/: CMakeLists.txt  main.cpp  qaptbatch.cpp
utils/qapt-deb-installer/: CMakeLists.txt  ChangesDialog.cpp  DebCommitWidget.cpp  DebViewer.cpp
utils/qapt-deb-thumbnailer/: CMakeLists.txt  debthumbnailer.cpp  debthumbnailer.h  debthumbnailer.json
utils/qapt-gst-helper/: CMakeLists.txt  PluginHelper.cpp  main.cpp
